Feature: All service - No filters yet - Change description varchar to 1000 - Photo was added to services table - Change role command is reworked
